clear output; fix argument of split

--- a/B-Series.ipynb
+++ b/B-Series.ipynb
@@ -1,7 +1,8 @@
 {
  "metadata": {
+  "gist_id": "525b97754a22cde5881b",
   "name": "",
-  "signature": "sha256:1c6395dc39abcfd1f6c29b3903f52c410bb593ab5f9cff5cb8e5910938c0428a"
+  "signature": "sha256:a9de779681377cbaee51783cf4b7560477efb38752c85b9bd238ccdccc99b1ff"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,8 +22,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -47,17 +47,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 2,
-       "text": [
-        "ButcherTree()"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -67,17 +57,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "'[]'"
-       ]
-      }
-     ],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -94,17 +74,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 4,
-       "text": [
-        "ButcherEmptyTree()"
-       ]
-      }
-     ],
-     "prompt_number": 4
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -121,17 +91,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 5,
-       "text": [
-        "'y'"
-       ]
-      }
-     ],
-     "prompt_number": 5
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -148,17 +108,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "'1*[]'"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -191,16 +141,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[[],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 7
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -217,16 +158,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "2*[[],[[]]] + 1*[[],[],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -243,16 +175,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -279,16 +202,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[]\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -299,16 +213,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 11
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -319,16 +224,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[[[]]] + 1*[[],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -339,16 +235,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "3*[[[]],[]] + 1*[[[[]]]] + 1*[[],[],[]] + 1*[[[],[]]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 13
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -359,16 +246,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "4*[[],[[[]]]] + 1*[[[[[]]]]] + 1*[[[],[],[]]] + 1*[[[[],[]]]] + 3*[[[]],[[]]] + 4*[[],[[],[]]] + 3*[[[[]],[]]] + 1*[[],[],[],[]] + 6*[[[]],[],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -385,17 +263,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 15,
-       "text": [
-        "354426847597"
-       ]
-      }
-     ],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -416,16 +284,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[[[]],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -441,22 +300,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "order:  4\n",
-        "number of children:  2\n",
-        "density:  8\n",
-        "symmetry:  1\n",
-        "alpha: 3\n",
-        "elementary differential: \"f''(f'f,f)\" (string)\n",
-        "multiplicities: [1, 1] (list)\n"
-       ]
-      }
-     ],
-     "prompt_number": 17
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -473,16 +317,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[[],[[[]]]] + 1*[[],[[],[]]] + 1*[[[]],[],[]] + -1*[[[[]],[]]] + 1*[[[]],[[]]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 18
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -495,20 +330,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print split(tree)"
+      "print split(t)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Multiset({(ButcherTree({ButcherTree(): 1}), ButcherTree()): 2, (ButcherEmptyTree(), ButcherTree({ButcherTree(): 2})): 1})\n"
-       ]
-      }
-     ],
-     "prompt_number": 19
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -526,8 +352,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 20
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -549,8 +374,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 21
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -568,25 +392,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\u00d8: 0\n",
-        "[]: 1\n",
-        "[[]]: 1\n",
-        "[[[]]]: 1/2\n",
-        "[[],[]]: 1\n",
-        "[[[]],[]]: 1/2\n",
-        "[[[[]]]]: 1/6\n",
-        "[[],[],[]]: 1\n",
-        "[[[],[]]]: 1/3\n",
-        "[[],[[[]]]]: 1/6\n"
-       ]
-      }
-     ],
-     "prompt_number": 22
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -599,30 +405,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "c = modifiedEquation(a)\n",
-      "print_for_first_trees(c,10)"
+      "#c = modifiedEquation(a)\n",
+      "#print_for_first_trees(c,10)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\u00d8: 0\n",
-        "[]: 0\n",
-        "[[]]: 0\n",
-        "[[[]]]: 0\n",
-        "[[],[]]: 0\n",
-        "[[[]],[]]: 0\n",
-        "[[[[]]]]: 0\n",
-        "[[],[],[]]: 0\n",
-        "[[[],[]]]: 0\n",
-        "[[],[[[]]]]: 0\n"
-       ]
-      }
-     ],
-     "prompt_number": 23
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -642,20 +430,15 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "A =\n",
-        "[[0 0]\n",
-        " [Fraction(1, 2) 0]]\n",
-        "b = [0 1]\n",
-        "RKmidpoint.order = 2\n"
-       ]
-      }
-     ],
-     "prompt_number": 24
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
