--- a/B-Series.ipynb
+++ b/B-Series.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "gist_id": "525b97754a22cde5881b",
   "name": "",
-  "signature": "sha256:a9de779681377cbaee51783cf4b7560477efb38752c85b9bd238ccdccc99b1ff"
+  "signature": "sha256:d126801e28d8857f8195fc62ef64da1216f0bd9835602f1945ad8dd4a7ee6600"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,16 +13,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from pybs.utils import number_of_trees_of_order\n",
-      "from pybs.trees import ButcherTree, ButcherEmptyTree, F, order, \\\n",
-      "    number_of_children, density, symmetry, alpha\n",
-      "from pybs.combinations import Forest, differentiate as D, graft, treeCommutator, split, treeGenerator\n",
-      "from pybs.series import hf_composition, modifiedEquation\n",
+      "from pybs.unordered_tree import number_of_trees_of_order, tree_generator, leaf\n",
+      "from pybs.unordered_tree import UnorderedTree\n",
+      "from pybs.combinations import empty_tree\n",
+      "from pybs.combinations import Forest, differentiate as D, graft, treeCommutator, split\n",
+      "from pybs.series import hf_composition, modified_equation\n",
       "from pybs.series.Bseries import exponential"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -43,21 +44,41 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ButcherTree()"
+      "UnorderedTree()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "UnorderedTree()"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "str(ButcherTree())"
+      "str(UnorderedTree())"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "'[]'"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -70,45 +91,61 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ButcherEmptyTree()"
+      "empty_tree"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "`F(ButcherEmptyTree())` is:"
-     ]
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "Forest()"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "F(ButcherEmptyTree())"
+      "str(empty_tree)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "so we have `D(ButcherEmptyTree)`"
-     ]
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "'()'"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "str(D(ButcherEmptyTree()))"
+      "str(D(empty_tree))"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "'1*[]'"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -136,12 +173,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "tree = ButcherTree(Forest([ButcherTree.basetree(), ButcherTree.basetree()]))\n",
+      "tree = UnorderedTree(Forest([leaf, leaf]))\n",
       "print tree"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[],[]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -154,11 +200,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print graft(tree, ButcherTree.basetree())"
+      "print graft(leaf, tree)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2*[[],[[]]] + 1*[[],[],[]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -171,11 +226,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print D(ButcherTree.basetree())"
+      "print D(leaf)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1*[[]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "heading",
@@ -197,12 +261,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "trees_of_order_1 = D(ButcherTree.emptytree())\n",
+      "trees_of_order_1 = D(empty_tree)\n",
       "print trees_of_order_1"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1*[]\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -213,7 +286,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1*[[]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -224,7 +306,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1*[[[]]] + 1*[[],[]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -235,7 +326,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3*[[[]],[]] + 1*[[[[]]]] + 1*[[],[],[]] + 1*[[[],[]]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -246,7 +346,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "4*[[],[[[]]]] + 1*[[[[[]]]]] + 1*[[[],[],[]]] + 1*[[[[],[]]]] + 3*[[[]],[[]]] + 4*[[],[[],[]]] + 3*[[[[]],[]]] + 1*[[],[],[],[]] + 6*[[[]],[],[]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -263,7 +372,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "354426847597"
+       ]
+      }
+     ],
+     "prompt_number": 15
     },
     {
      "cell_type": "heading",
@@ -277,30 +396,54 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "tmp = ButcherTree(Forest([ButcherTree.basetree()]))\n",
-      "t = ButcherTree(Forest([tmp, ButcherTree.basetree()]))\n",
+      "tmp = UnorderedTree(Forest([leaf]))\n",
+      "t = UnorderedTree(Forest([tmp, leaf]))\n",
       "del tmp\n",
       "print t"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[[]],[]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print 'order: ', order(t)\n",
-      "print 'number of children: ', number_of_children(t)\n",
-      "print 'density: ', density(t)\n",
-      "print 'symmetry: ', symmetry(t)\n",
-      "print 'alpha:', alpha(t)\n",
-      "print 'elementary differential: \"' + F(t) + '\" (string)'\n",
+      "print 'order: ', t.order()\n",
+      "print 'number of children: ', t.number_of_children()\n",
+      "print 'density: ', t.density()\n",
+      "print 'symmetry: ', t.symmetry()\n",
+      "print 'alpha:', t.alpha()\n",
+      "print 'elementary differential: \"' + t.F() + '\" (string)'\n",
       "print 'multiplicities:', t.multiplicities(),  '(list)'"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "order:  4\n",
+        "number of children:  2\n",
+        "density:  8\n",
+        "symmetry:  1\n",
+        "alpha: 3\n",
+        "elementary differential: \"f''(f'f,f)\" (string)\n",
+        "multiplicities: [1, 1] (list)\n"
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -313,11 +456,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print treeCommutator(t, ButcherTree.basetree())"
+      "print treeCommutator(t, leaf)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1*[[[[]],[]]] + -1*[[],[[[]]]] + -1*[[[]],[],[]] + -1*[[[]],[[]]] + -1*[[],[[],[]]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 33
     },
     {
      "cell_type": "markdown",
@@ -334,7 +486,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1*(UnorderedTree(), UnorderedTree({UnorderedTree({UnorderedTree(): 1}): 1})) + 1*(UnorderedTree({UnorderedTree(): 1}), UnorderedTree({UnorderedTree(): 1})) + 1*(UnorderedTree(), UnorderedTree({UnorderedTree(): 2})) + 1*(UnorderedTree({UnorderedTree({UnorderedTree(): 1}): 1, UnorderedTree(): 1}), Forest())\n"
+       ]
+      }
+     ],
+     "prompt_number": 34
     },
     {
      "cell_type": "heading",
@@ -352,7 +513,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -367,14 +529,15 @@
      "input": [
       "from itertools import islice\n",
       "def to_first_trees(f, n):\n",
-      "    return ((tree,f(tree)) for tree in islice(treeGenerator(),0,n))\n",
+      "    return ((tree,f(tree)) for tree in islice(tree_generator(),0,n))\n",
       "def print_for_first_trees(f,n):\n",
       "    for (t,v) in to_first_trees(f,n):\n",
       "        print \"{}: {}\".format(t,v)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 38
     },
     {
      "cell_type": "markdown",
@@ -392,7 +555,25 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[]: 1\n",
+        "[[]]: 1\n",
+        "[[[]]]: 1/2\n",
+        "[[],[]]: 1\n",
+        "[[[]],[]]: 1/2\n",
+        "[[[[]]]]: 1/6\n",
+        "[[],[],[]]: 1\n",
+        "[[[],[]]]: 1/3\n",
+        "[[],[[[]]]]: 1/6\n",
+        "[[[[]],[]]]: 1/8\n"
+       ]
+      }
+     ],
+     "prompt_number": 39
     },
     {
      "cell_type": "markdown",
@@ -405,12 +586,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#c = modifiedEquation(a)\n",
-      "#print_for_first_trees(c,10)"
+      "c = modified_equation(a)\n",
+      "print_for_first_trees(c,10)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[]: 1\n",
+        "[[]]: 0\n",
+        "[[[]]]: 0\n",
+        "[[],[]]: 0\n",
+        "[[[]],[]]: 0\n",
+        "[[[[]]]]: 0\n",
+        "[[],[],[]]: 0\n",
+        "[[[],[]]]: 0\n",
+        "[[],[[[]]]]: 0\n",
+        "[[[[]],[]]]: 0\n"
+       ]
+      }
+     ],
+     "prompt_number": 40
     },
     {
      "cell_type": "heading",
@@ -430,7 +629,20 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "A =\n",
+        "[[0 0]\n",
+        " [Fraction(1, 2) 0]]\n",
+        "b = [0 1]\n",
+        "RKmidpoint.order = 2\n"
+       ]
+      }
+     ],
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -438,7 +650,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 24
     }
    ],
    "metadata": {}
