Get tikz-pictures in IPython.

--- a/B-Series.ipynb
+++ b/B-Series.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "gist_id": "525b97754a22cde5881b",
   "name": "",
-  "signature": "sha256:d126801e28d8857f8195fc62ef64da1216f0bd9835602f1945ad8dd4a7ee6600"
+  "signature": "sha256:a61cbf4cfb9a5858cd7b1842de1e3c3f521f89e2aa53c6ff1bccf0b1c9223cfe"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,6 +13,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from IPython.display import display\n",
       "from pybs.unordered_tree import number_of_trees_of_order, tree_generator, leaf\n",
       "from pybs.unordered_tree import UnorderedTree\n",
       "from pybs.combinations import empty_tree\n",
@@ -44,15 +45,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "UnorderedTree()"
+      "display(UnorderedTree())"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 2,
+       "output_type": "display_data",
+       "svg": [
+        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"20.511pt\" height=\"7.228pt\" viewBox=\"0 0 20.511 7.228\" version=\"1.1\">\n",
+        "<defs>\n",
+        "<clipPath id=\"clip1\">\n",
+        "  <path d=\"M 7 0 L 20.511719 0 L 20.511719 7.226562 L 7 7.226562 Z M 7 0 \"/>\n",
+        "</clipPath>\n",
+        "</defs>\n",
+        "<g id=\"surface1\">\n",
+        "<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 18.210938 3.613281 C 18.210938 2.886719 17.625 2.300781 16.898438 2.300781 C 16.171875 2.300781 15.582031 2.886719 15.582031 3.613281 C 15.582031 4.339844 16.171875 4.929688 16.898438 4.929688 C 17.625 4.929688 18.210938 4.339844 18.210938 3.613281 Z M 18.210938 3.613281 \"/>\n",
+        "<g clip-path=\"url(#clip1)\" clip-rule=\"nonzero\">\n",
+        "<path style=\"fill:none;stroke-width:0.59776;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 1.313937 0.00071875 C 1.313937 0.727281 0.728 1.313219 0.0014375 1.313219 C -0.725125 1.313219 -1.314969 0.727281 -1.314969 0.00071875 C -1.314969 -0.725844 -0.725125 -1.315688 0.0014375 -1.315688 C 0.728 -1.315688 1.313937 -0.725844 1.313937 0.00071875 Z M 1.313937 0.00071875 \" transform=\"matrix(1,0,0,-1,16.897,3.614)\"/>\n",
+        "</g>\n",
+        "</g>\n",
+        "</svg>\n"
+       ],
        "text": [
         "UnorderedTree()"
        ]
@@ -174,16 +190,54 @@
      "collapsed": false,
      "input": [
       "tree = UnorderedTree(Forest([leaf, leaf]))\n",
-      "print tree"
+      "tree"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "svg": [
+        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"25.33pt\" height=\"12.046pt\" viewBox=\"0 0 25.33 12.046\" version=\"1.1\">\n",
+        "<defs>\n",
+        "<clipPath id=\"clip1\">\n",
+        "  <path d=\"M 9 0 L 25.328125 0 L 25.328125 12.046875 L 9 12.046875 Z M 9 0 \"/>\n",
+        "</clipPath>\n",
+        "<clipPath id=\"clip2\">\n",
+        "  <path d=\"M 7 0 L 25.328125 0 L 25.328125 12.046875 L 7 12.046875 Z M 7 0 \"/>\n",
+        "</clipPath>\n",
+        "<clipPath id=\"clip3\">\n",
+        "  <path d=\"M 9 0 L 25.328125 0 L 25.328125 12.046875 L 9 12.046875 Z M 9 0 \"/>\n",
+        "</clipPath>\n",
+        "<clipPath id=\"clip4\">\n",
+        "  <path d=\"M 11 0 L 25.328125 0 L 25.328125 12.046875 L 11 12.046875 Z M 11 0 \"/>\n",
+        "</clipPath>\n",
+        "</defs>\n",
+        "<g id=\"surface1\">\n",
+        "<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 20.621094 8.433594 C 20.621094 7.707031 20.035156 7.117188 19.308594 7.117188 C 18.582031 7.117188 17.992188 7.707031 17.992188 8.433594 C 17.992188 9.160156 18.582031 9.746094 19.308594 9.746094 C 20.035156 9.746094 20.621094 9.160156 20.621094 8.433594 Z M 20.621094 8.433594 \"/>\n",
+        "<g clip-path=\"url(#clip1)\" clip-rule=\"nonzero\">\n",
+        "<path style=\"fill:none;stroke-width:0.59776;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 1.314094 -0.00159375 C 1.314094 0.724969 0.728156 1.314812 0.00159375 1.314812 C -0.724969 1.314812 -1.314813 0.724969 -1.314813 -0.00159375 C -1.314813 -0.728156 -0.724969 -1.314094 0.00159375 -1.314094 C 0.728156 -1.314094 1.314094 -0.728156 1.314094 -0.00159375 Z M 1.314094 -0.00159375 \" transform=\"matrix(1,0,0,-1,19.307,8.432)\"/>\n",
+        "</g>\n",
+        "<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 18.210938 3.613281 C 18.210938 2.886719 17.625 2.296875 16.898438 2.296875 C 16.171875 2.296875 15.582031 2.886719 15.582031 3.613281 C 15.582031 4.339844 16.171875 4.929688 16.898438 4.929688 C 17.625 4.929688 18.210938 4.339844 18.210938 3.613281 Z M 18.210938 3.613281 \"/>\n",
+        "<g clip-path=\"url(#clip2)\" clip-rule=\"nonzero\">\n",
+        "<path style=\"fill:none;stroke-width:0.59776;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M -1.096063 4.818719 C -1.096063 5.545281 -1.682 6.135125 -2.408563 6.135125 C -3.135125 6.135125 -3.724969 5.545281 -3.724969 4.818719 C -3.724969 4.092156 -3.135125 3.502312 -2.408563 3.502312 C -1.682 3.502312 -1.096063 4.092156 -1.096063 4.818719 Z M -1.096063 4.818719 \" transform=\"matrix(1,0,0,-1,19.307,8.432)\"/>\n",
+        "</g>\n",
+        "<g clip-path=\"url(#clip3)\" clip-rule=\"nonzero\">\n",
+        "<path style=\"fill:none;stroke-width:0.59776;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M -0.627313 1.256219 L -1.783563 3.568719 \" transform=\"matrix(1,0,0,-1,19.307,8.432)\"/>\n",
+        "</g>\n",
+        "<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 23.03125 3.613281 C 23.03125 2.886719 22.441406 2.296875 21.714844 2.296875 C 20.988281 2.296875 20.402344 2.886719 20.402344 3.613281 C 20.402344 4.339844 20.988281 4.929688 21.714844 4.929688 C 22.441406 4.929688 23.03125 4.339844 23.03125 3.613281 Z M 23.03125 3.613281 \"/>\n",
+        "<g clip-path=\"url(#clip4)\" clip-rule=\"nonzero\">\n",
+        "<path style=\"fill:none;stroke-width:0.59776;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 3.72425 4.818719 C 3.72425 5.545281 3.134406 6.135125 2.407844 6.135125 C 1.681281 6.135125 1.095344 5.545281 1.095344 4.818719 C 1.095344 4.092156 1.681281 3.502312 2.407844 3.502312 C 3.134406 3.502312 3.72425 4.092156 3.72425 4.818719 Z M 3.72425 4.818719 \" transform=\"matrix(1,0,0,-1,19.307,8.432)\"/>\n",
+        "<path style=\"fill:none;stroke-width:0.59776;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 0.626594 1.256219 L 1.782844 3.568719 \" transform=\"matrix(1,0,0,-1,19.307,8.432)\"/>\n",
+        "</g>\n",
+        "</g>\n",
+        "</svg>\n"
+       ],
        "text": [
-        "[[],[]]\n"
+        "UnorderedTree({UnorderedTree(): 2})"
        ]
       }
      ],
@@ -200,7 +254,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print graft(leaf, tree)"
+      "a=graft(leaf, tree)\n",
+      "print a"
      ],
      "language": "python",
      "metadata": {},
@@ -213,7 +268,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -230,16 +285,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -266,16 +312,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[]\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -286,16 +323,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 11
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -306,16 +334,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[[[]]] + 1*[[],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -326,16 +345,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "3*[[[]],[]] + 1*[[[[]]]] + 1*[[],[],[]] + 1*[[[],[]]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 13
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -346,16 +356,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "4*[[],[[[]]]] + 1*[[[[[]]]]] + 1*[[[],[],[]]] + 1*[[[[],[]]]] + 3*[[[]],[[]]] + 4*[[],[[],[]]] + 3*[[[[]],[]]] + 1*[[],[],[],[]] + 6*[[[]],[],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -372,17 +373,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 15,
-       "text": [
-        "354426847597"
-       ]
-      }
-     ],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -399,20 +390,11 @@
       "tmp = UnorderedTree(Forest([leaf]))\n",
       "t = UnorderedTree(Forest([tmp, leaf]))\n",
       "del tmp\n",
-      "print t"
+      "t"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[[[]],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -428,22 +410,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "order:  4\n",
-        "number of children:  2\n",
-        "density:  8\n",
-        "symmetry:  1\n",
-        "alpha: 3\n",
-        "elementary differential: \"f''(f'f,f)\" (string)\n",
-        "multiplicities: [1, 1] (list)\n"
-       ]
-      }
-     ],
-     "prompt_number": 30
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -460,16 +427,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*[[[[]],[]]] + -1*[[],[[[]]]] + -1*[[[]],[],[]] + -1*[[[]],[[]]] + -1*[[],[[],[]]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 33
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -486,16 +444,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1*(UnorderedTree(), UnorderedTree({UnorderedTree({UnorderedTree(): 1}): 1})) + 1*(UnorderedTree({UnorderedTree(): 1}), UnorderedTree({UnorderedTree(): 1})) + 1*(UnorderedTree(), UnorderedTree({UnorderedTree(): 2})) + 1*(UnorderedTree({UnorderedTree({UnorderedTree(): 1}): 1, UnorderedTree(): 1}), Forest())\n"
-       ]
-      }
-     ],
-     "prompt_number": 34
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -513,8 +462,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 35
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -532,12 +480,13 @@
       "    return ((tree,f(tree)) for tree in islice(tree_generator(),0,n))\n",
       "def print_for_first_trees(f,n):\n",
       "    for (t,v) in to_first_trees(f,n):\n",
-      "        print \"{}: {}\".format(t,v)"
+      "        display(t)\n",
+      "        print v\n",
+      "#        print \"{}: {}\".format(t,v)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 38
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -555,25 +504,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[]: 1\n",
-        "[[]]: 1\n",
-        "[[[]]]: 1/2\n",
-        "[[],[]]: 1\n",
-        "[[[]],[]]: 1/2\n",
-        "[[[[]]]]: 1/6\n",
-        "[[],[],[]]: 1\n",
-        "[[[],[]]]: 1/3\n",
-        "[[],[[[]]]]: 1/6\n",
-        "[[[[]],[]]]: 1/8\n"
-       ]
-      }
-     ],
-     "prompt_number": 39
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -591,25 +522,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[]: 1\n",
-        "[[]]: 0\n",
-        "[[[]]]: 0\n",
-        "[[],[]]: 0\n",
-        "[[[]],[]]: 0\n",
-        "[[[[]]]]: 0\n",
-        "[[],[],[]]: 0\n",
-        "[[[],[]]]: 0\n",
-        "[[],[[[]]]]: 0\n",
-        "[[[[]],[]]]: 0\n"
-       ]
-      }
-     ],
-     "prompt_number": 40
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -629,20 +542,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "A =\n",
-        "[[0 0]\n",
-        " [Fraction(1, 2) 0]]\n",
-        "b = [0 1]\n",
-        "RKmidpoint.order = 2\n"
-       ]
-      }
-     ],
-     "prompt_number": 41
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -650,8 +550,15 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 24
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
