--- a/B-Series.ipynb
+++ b/B-Series.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "gist_id": "525b97754a22cde5881b",
   "name": "",
-  "signature": "sha256:a61cbf4cfb9a5858cd7b1842de1e3c3f521f89e2aa53c6ff1bccf0b1c9223cfe"
+  "signature": "sha256:b409f045a74c9ce281b6fdf93e7b4aa36d57edd114731b9609467d75cb2f356a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,8 +23,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": [
+      {
+       "ename": "ImportError",
+       "evalue": "cannot import name treeCommutator",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-2-ffc4c6da5982>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpybs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munordered_tree\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mUnorderedTree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpybs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcombinations\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mempty_tree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpybs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcombinations\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mForest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdifferentiate\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgraft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtreeCommutator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpybs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseries\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhf_composition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodified_equation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpybs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBseries\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mexponential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mImportError\u001b[0m: cannot import name treeCommutator"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -49,32 +60,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "display_data",
-       "svg": [
-        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
-        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"20.511pt\" height=\"7.228pt\" viewBox=\"0 0 20.511 7.228\" version=\"1.1\">\n",
-        "<defs>\n",
-        "<clipPath id=\"clip1\">\n",
-        "  <path d=\"M 7 0 L 20.511719 0 L 20.511719 7.226562 L 7 7.226562 Z M 7 0 \"/>\n",
-        "</clipPath>\n",
-        "</defs>\n",
-        "<g id=\"surface1\">\n",
-        "<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 18.210938 3.613281 C 18.210938 2.886719 17.625 2.300781 16.898438 2.300781 C 16.171875 2.300781 15.582031 2.886719 15.582031 3.613281 C 15.582031 4.339844 16.171875 4.929688 16.898438 4.929688 C 17.625 4.929688 18.210938 4.339844 18.210938 3.613281 Z M 18.210938 3.613281 \"/>\n",
-        "<g clip-path=\"url(#clip1)\" clip-rule=\"nonzero\">\n",
-        "<path style=\"fill:none;stroke-width:0.59776;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 1.313937 0.00071875 C 1.313937 0.727281 0.728 1.313219 0.0014375 1.313219 C -0.725125 1.313219 -1.314969 0.727281 -1.314969 0.00071875 C -1.314969 -0.725844 -0.725125 -1.315688 0.0014375 -1.315688 C 0.728 -1.315688 1.313937 -0.725844 1.313937 0.00071875 Z M 1.313937 0.00071875 \" transform=\"matrix(1,0,0,-1,16.897,3.614)\"/>\n",
-        "</g>\n",
-        "</g>\n",
-        "</svg>\n"
-       ],
-       "text": [
-        "UnorderedTree()"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -84,17 +70,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "'[]'"
-       ]
-      }
-     ],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -111,17 +87,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 4,
-       "text": [
-        "Forest()"
-       ]
-      }
-     ],
-     "prompt_number": 4
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -131,17 +97,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 5,
-       "text": [
-        "'()'"
-       ]
-      }
-     ],
-     "prompt_number": 5
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -151,17 +107,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "'1*[]'"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -198,7 +144,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 3,
        "svg": [
         "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
         "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"25.33pt\" height=\"12.046pt\" viewBox=\"0 0 25.33 12.046\" version=\"1.1\">\n",
@@ -241,7 +187,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -259,16 +205,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "2*[[],[[]]] + 1*[[],[],[]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -276,16 +213,6 @@
      "source": [
       "By taking the derivative of existing trees:"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print D(leaf)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "heading",
